// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a snapshot 1`] = `
<div
  className="App"
>
  <div
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="logo.svg"
    />
    <h2>
      Welcome to React
    </h2>
  </div>
  <p
    className="App-intro"
  >
    To get started, edit 
    <code>
      src/App.js
    </code>
     and save to reload.
  </p>
  <span>
    Value: 
    0
    <button
      className="decrement"
      onClick={[Function]}
    >
      −
    </button>
    <button
      className="increment"
      onClick={[Function]}
    >
      +
    </button>
  </span>
</div>
`;

exports[`should not go negative 1`] = `
<span>
  Value: 
  0
  <button
    className="decrement"
    onClick={[Function]}
  >
    −
  </button>
  <button
    className="increment"
    onClick={[Function]}
  >
    +
  </button>
</span>
`;

exports[`should render 0 1`] = `
<span>
  Value: 
  0
  <button
    className="decrement"
    onClick={[Function]}
  >
    −
  </button>
  <button
    className="increment"
    onClick={[Function]}
  >
    +
  </button>
</span>
`;

exports[`should render 2 1`] = `
<span>
  Value: 
  2
  <button
    className="decrement"
    onClick={[Function]}
  >
    −
  </button>
  <button
    className="increment"
    onClick={[Function]}
  >
    +
  </button>
</span>
`;
